k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-app-deployment
spec:
  selector:
    matchLabels:
      app: config-app
  replicas: 1
  template:
    metadata:
      labels:
        app: config-app
    spec:
      containers:
        - name: config-server
          image: localhost:5000/config-service:latest
          ports:
            - name: config-sv-port
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
            terminationGracePeriodSeconds: 30
          readinessProbe:
            httpGet:
              path: /readyz
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 3
