k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: config-app-svc
spec:
  selector:
    app: config-app
  type: ClusterIP
  ports:
    - name: config-sv-svc-port
      protocol: TCP
      port: 80
      targetPort: config-sv-port
